# linux-syscall-support

./: CMakeLists.txt  linux_syscall_support.h
tests/: Makefile
